simplify path hash calculation - do not use FileUtilRt.toCanonicalPath
GitOrigin-RevId: dbbc0459c550753ef216f8e4f2e65d5e4e3b80e1